--- a/project4.html
+++ b/project4.html
@@ -11,6 +11,10 @@
         <h1>Hacktoberfest 2024 Registration</h1>
         <p>Join us for a month of open-source contributions!</p>
     </header>
+<header>
+        <h1>Hacktoberfest 2024 Registration</h1>
+        <p>Join us for a month of open-source contributions!</p>
+    </header>
 
     <main>
         <form class="registration-form">
