--- a/project4.html
+++ b/project4.html
@@ -6,6 +6,12 @@
     <title>Hacktoberfest Event Registration</title>
     <link rel="stylesheet" href="project4.css">
 </head>
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hacktoberfest Event Registration</title>
+    <link rel="stylesheet" href="project4.css">
+</head>
 <body>
     <header>
         <h1>Hacktoberfest 2024 Registration</h1>
