--- a/project4.html
+++ b/project4.html
@@ -41,6 +41,21 @@
 
             <button type="submit">Register</button>
         </form>
+         <form class="registration-form">
+            <label for="name">Full Name:</label>
+            <input type="text" id="name" name="name" required>
+
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+
+            <label for="github">GitHub Username:</label>
+            <input type="text" id="github" name="github" required>
+
+            <label for="event-date">Event Date:</label>
+            <input type="date" id="event-date" name="event-date" required>
+
+            <button type="submit">Register</button>
+        </form>
     </main>
 
     <footer>
